tests/errors/prelude-weak-reserved.ari
fn main() -> i64 {
  let value: Weak[i64] = 0;
  return value;
}
